--- a/Parcial 1/CSS/Style.css
+++ b/Parcial 1/CSS/Style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: antiquewhite;
+    background-color: white;
 }
 /*header*/
 
@@ -59,3 +59,50 @@
 
 /*body*/
 
+.container-inicio{
+    display: grid;
+    grid-template-rows: repeat(2, 1fr); 
+    grid-template-columns: repeat(3, 1fr);
+    height: 85px;
+    padding: 5px 10%;
+}
+
+.container-inicio h1{
+    width: 500px;
+    font-family: 'Hind Vadodara';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 99.8%;
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.container-inicio p{
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.container-inicio a{
+    grid-column: 1;
+    grid-row: 3;
+}
+
+.container-inicio img{
+    grid-column: 2;
+    grid-row: 1/4;
+}
+
+.button-inicio {
+    background: #331B3B;
+    text-align: center;
+    letter-spacing: 3px;
+    width: 160px;
+    height: 60px;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    font-size: 20px;
+    outline: none;
+    text-decoration: none;
+}
