--- a/Parcial 1/CSS/Style.css
+++ b/Parcial 1/CSS/Style.css
@@ -128,7 +128,6 @@
     height: 85px;
     padding-top: 5px;
     padding-bottom: 50px;
-
 }
 
 .cards{
@@ -144,7 +143,8 @@
 }
 
 .card-img img{
-    width: 100%;
+    width: 52px;
+    height: 48px;
     border-radius: 10px 10px 0px 0px;
 }
 
