--- a/Parcial 1/CSS/Style.css
+++ b/Parcial 1/CSS/Style.css
@@ -1,5 +1,7 @@
 *{
-    background-color: white;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 /*header*/
 
@@ -8,23 +10,17 @@
     justify-content: space-between;
     align-items: center;
     height: 85px;
-    padding: 5px 10%;
 }
-
-.nav-lista{
-    list-style: none;
-}
-
-.nav-lista li{
+.container-nav li{
     display: inline-block;
     padding: 0 20px;
 }
 
-.nav-lista li:hover{
+.container-nav li:hover{
     transform: scale(1.1);
 }
 
-.nav-lista a{
+.container-nav a{
     font-family: 'Hind Vadodara';
     font-style: normal;
     font-weight: 600;
@@ -34,15 +30,24 @@
     color: #331B3B;
 }
 
-.nav-lista a:hover{
+.container-nav a:hover{
     color: red;
+}
+.container-nav .social{
+    margin-right: 2%;
 }
 
 .container-nav h1{
     font-family: 'Playfair Display';
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: max-content;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 24px;
     line-height: 28px;
     letter-spacing: 0.01em;
+    text-align: center;
     color: #331B3B;
 }
 
@@ -61,19 +66,15 @@
 
 .container-inicio{
     display: grid;
-    grid-template-rows: repeat(2, 1fr); 
-    grid-template-columns: repeat(3, 1fr);
-    height: 85px;
-    padding: 5px 10%;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
-
 .container-inicio h1{
-    width: 500px;
     font-family: 'Hind Vadodara';
     font-style: normal;
     font-weight: 700;
     font-size: 75px;
-    line-height: 99.8%;
+    line-height: 100%;
     grid-column: 1;
     grid-row: 1;
 }
@@ -116,7 +117,6 @@
 
 .titulo-servicio{
     left: 529px;
-    padding-top: 550px;
     text-align: center;
     font-family: 'Hind Vadodara';
     font-style: normal;
