--- a/Parcial 1/CSS/Style.css
+++ b/Parcial 1/CSS/Style.css
@@ -68,12 +68,36 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    margin-left: 40px;
+    position: relative;
+   
+    
+}
+.rectangulo{
+    width: 250px ;
+    height: 15px;
+    background-color: gold;
+    position: absolute;
+    left: 5px;
+    top: 315px;
+    z-index: -1;
+  
 }
 .container-inicio h1{
     font-family: 'Hind Vadodara';
     font-style: normal;
     font-weight: 700;
     font-size: 75px;
+    line-height: 100%;
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.container-inicio b{
+    font-family: 'Hind Vadodara';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 80px;
     line-height: 100%;
     grid-column: 1;
     grid-row: 1;
@@ -90,8 +114,10 @@
 }
 
 .container-inicio img{
+    
     grid-column: 2;
     grid-row: 1/4;
+    
 }
 
 .container-inicio button{
