--- a/Parcial 1/CSS/Style.css
+++ b/Parcial 1/CSS/Style.css
@@ -1,4 +1,6 @@
 *{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
@@ -66,7 +68,6 @@
 
 .container-inicio{
     display: grid;
-    grid-template-columns: 1fr 1fr;
     align-items: center;
 }
 .container-inicio h1{
@@ -116,7 +117,6 @@
 /* cards */
 
 .titulo-servicio{
-    left: 529px;
     text-align: center;
     font-family: 'Hind Vadodara';
     font-style: normal;
@@ -300,7 +300,125 @@
 
 
 /* footer */
+footer {
+    display: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: black ;
+    color: white;
+}
 
+.container-footer{
+    display: flex;
+    padding: 5rem;
+}
+.container-footer .section {
+    flex-basis:content;
+    padding: 0 20px;
+}
+.container-footer .left {
+    flex-basis: 50%;
+    padding: 0 20px;
+}
+
+.left p {
+    margin-right: 40%;
+    padding-bottom: 2%;
+}
+
+.left .content {
+    margin: 20px 0 0 0;
+    position: relative;
+}
+
+.left .content::before {
+    position: absolute;
+    content: '';
+    top: -10px;
+    height: 2px;
+    width: 100%;
+}
+.left button{
+    height: 20px;
+    border: none;
+    outline: none;
+    background: black;
+    color: white;
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.right{
+    text-decoration: none;
+    height: 50px;
+    line-height: 50px;
+    margin-right: 50px;
+}
+
+.right input{
+    height: 30px;
+    font-size: 1.0625rem;;
+}
+.right textarea{
+    font-size: 1.0625rem ;
+    height: 100px;
+    width: 100%;
+}
+.right button{
+    height: 30px;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #5b5e63;
+    color: white;
+    font-size: 1.0625rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.right2 .icons a{
+    display: inline-block;
+    text-decoration: none;
+    color: #5b5e63;
+    text-align: center;
+    transition: all 0.3s ease;
+    font-size: 20px;
+    margin-top: 20px;
+
+}
+.right2{
+    text-decoration: none;
+    height: 50px;
+    line-height: 50px;
+    margin-right: 50px;
+}
+.right2 input{
+    height: 30px;
+    font-size: 1.0625rem;;
+}
+
+@media screen and (max-width:700px) {
+    footer {
+        position: relative;
+        bottom: 0px;
+    }
+
+    .left .content {
+        padding-right: 0px;
+        padding-bottom: 30px;
+    }
+
+    .container-footer {
+        flex-wrap: wrap;
+        flex-direction: column;
+        padding: 0.5rem;
+    }
+
+    .container-footer .section {
+        margin: 5px 0;
+    }
+}
 
 
 
