--- a/Parcial 1/CSS/Style.css
+++ b/Parcial 1/CSS/Style.css
@@ -94,9 +94,9 @@
   
 }
 .container-inicio h1{
-    font-family: 'Hind Vadodara';
+    font-family: 'Hind Vadodara', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 300;
     font-size: 75px;
     line-height: 100%;
     grid-column: 1;
@@ -105,9 +105,9 @@
 }
 
 .container-inicio b{
-    font-family: 'Hind Vadodara';
+    font-family: 'Hind Vadodara', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 800;
     font-size: 80px;
     line-height: 100%;
     grid-column: 1;
@@ -118,9 +118,9 @@
 .container-inicio p{
     grid-column: 1;
     grid-row: 2;
-    font-family: 'Hind Vadodara';
+    font-family: 'Hind Vadodara', sans-serif;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 20px;
     color: var(--color-letra);
 }
@@ -193,16 +193,37 @@ z-index: 2;
 }
 
 /* cards */
-
+.cards{
+    width: 300px;
+    margin: 10px;
+    background-color: white;
+    border-radius: 10px;
+    transition: 0.2s;
+}
 .titulo-servicio{
     
     margin-top: 70px;
     text-align: center;
-    font-family: 'Hind Vadodara';
+   
+    line-height: 106.3%;
+    color: var(--color-letra);
+}
+.titulo-servicio h3{
+   
+    font-family: 'Hind Vadodara', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 45px;
+    line-height: 100%;
+    color: var(--color-letra);
+}
+.titulo-servicio b{
+   
+    font-family: 'Hind Vadodara', sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 48px;
-    line-height: 106.3%;
+    font-size: 45px;
+    line-height: 100%;
     color: var(--color-letra);
 }
 
@@ -219,51 +240,35 @@ z-index: 2;
     padding-bottom: 50px;
     
 }
-.container{
-   
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 85px;
-    padding-top: 5px;
-    padding-bottom: 50px;
-    
-}
 
 
-.cards{
-    width: 300px;
-    margin: 10px;
-    background-color: white;
-    border-radius: 10px;
-    transition: 0.2s;
-}
-.card-body {
-    margin: 10px;
-}
-.cards:hover{
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
 
-.card-img img{
-    width: 52px;
-    height: 48px;
-    border-radius: 10px 10px 0px 0px;
-}
+    .card-img img{
+        margin-top: 20px;
+        margin-left: 20px;
+        width: 52px;
+        height: 48px;
+        border-radius: 10px 10px 0px 0px;
+    }
 
-.card-body h2{
-    font-family: 'Hind Vadodara';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 137.3%;
-}
+    .card-body h2{
+        font-family: 'Hind Vadodara',sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 137.3%;
+    }
 
-.card-body p{
-    text-align: justify;
-    margin-bottom: 10px;
-    padding: 5px;
-}
+    .card-body p{
+        font-family: 'Hind Vadodara',sans-serif;
+        text-align: justify;
+        margin-bottom: 15px;
+        padding: 5px;
+    }
+
+    .cards:hover{
+        box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    }
 
 .card-footer{
     display: flex;
@@ -280,6 +285,7 @@ z-index: 2;
     padding: 200px 10%;
     position: relative;
 }
+
 .rectangulo-nosotros{
     width: 76px ;
     height: 10px;
@@ -337,13 +343,102 @@ z-index: 2;
     cursor: pointer;
 }
 
-/* trabajos realizaods */
+/* trabajos realizados */
 
+.trabajosrealizados{
+
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 650px;
+    position: relative;
+}
 .container-trabajos{
+    
+    margin-top: 50px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(1,1fr);
     padding: 5px 10%;
+    
+    
+}
+.rectangulofondo{
+    
+    width: 90% ;
+    height: 100%;
+    background-color: #FFDED4;
+    position: absolute;
+    left: 130px;
+    top: 0px;
+    z-index: -1;
+    border-radius: 400px 0px 0px 0px;
+    
+    
+}
+.container-tarjetas{
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 268px;
+    padding-top: 5px;
+    padding-bottom: 50px;
+    
+}
+
+.cards-tarjeta{
+    
+    width: 419px;
+    height: 365px;
+    margin: 10px;
+    background-color: white;
+    border-radius: 10px;
+    transition: 0.2s;
+   
+    justify-content: center;
+}
+.card-body-tar {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    margin: 20px;
+    margin-top: 40px;
+    flex-direction: row;
+    
+    
+}
+.btn-card{
+     
+    align-items: end;
+    background-color: white;
+    color: var(--color-letra);
+    border: 1px solid var(--color-letra);
+    border-radius: 15px 15px 15px 15px;
+    font-family: 'Hind Vadodara';
+    transition: 0.3s;
+    cursor: pointer;
+}
+.btn-card:hover{
+    transform: scale(1.1);
+}
+.card-img-job img{
+    width: 100%;
+    
+    
+    border-radius: 10px 10px 0px 0px;
+}
+.card-body-tar h2{
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 137.3%;
+    color: var(--color-letra);
+}
+
+
+.cards-tarjeta:hover{
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .container-trabajos h2{
@@ -376,39 +471,88 @@ z-index: 2;
 
 /* cards trabajosb */
 
-.card-img-job img{
-    width: 300px;
-    border-radius: 10px 10px 0px 0px;
+
+
+
+
+/* Testimonios */
+
+.testimonial-container{
+    margin-top: 150px;
+    width: 100%;
+    height: 450px;
+    
+
 }
-
-
-/* comentarios */
-
 .testimonial-container h1{
 	text-align: center;
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    color: var(--color-letra);
 }
-
+.testimonial-container b{
+	text-align: center;
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--color-letra);
+}
 .contentTestimonial {
-    display: grid;
-    width: 60%;
+    display: flex;
+    width: 100%;
     margin: 20px auto;
-    gap: 1em;
-    overflow: hidden;
+   justify-content: center;
+    
+    flex-direction: row;
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
 }
-.cart1{
+.cart1-2{
+    display: flex;
+    flex-direction: column;
+    width: 448px;
+    height: 310px;
 	margin-right: 20px;
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 9px 17px 0px rgba(0,0,0,0.69);
+    -moz-box-shadow: 0px 9px 17px 0px rgba(0,0,0,0.69);
+    box-shadow: 0px 9px 17px 0px rgba(0,0,0,0.69);
+    
 }
-.cart2{
-	margin-right: 20px;
+
+.cart1-2 p{
+    
+    margin: 25px;
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--color-letra);
 }
+
 .testimonial {
   line-height: 28px;
   text-align: justify;
 }
 #Icons{
-	font-size: 45px;
-	color: yellow;
+    margin: 20px;
+   
+	font-size: 50px;
+	color: var(--color-main);
+    
+}
+.ul{
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 16px;
+    color: black;
+    margin: 20px;
+    margin-top: 5px;
+    margin-left: 40px;
+
 }
 @keyframes grow {
   0% {
@@ -420,20 +564,28 @@ z-index: 2;
   .testimonial-container {
     padding: 20px 30px;
   }
-
+  .contentTestimonial{
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
   .fa-quote {
     display: none;
   }
+
+  
 }
 
 
 /* footer */
 footer {
+
+    margin-top: 100px;
     display: fixed;
     bottom: 0;
     width: 100%;
     background-color: black ;
     color: white;
+    border-top-right-radius: 120px 120px;
 }
 
 .container-footer{
@@ -485,8 +637,13 @@ footer {
 }
 
 .right input{
+    width: 100%;
     height: 30px;
-    font-size: 1.0625rem;;
+    font-size: 1.0625rem;
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
 }
 .right textarea{
     font-size: 1.0625rem ;
@@ -498,7 +655,7 @@ footer {
     width: 100%;
     border: none;
     outline: none;
-    background: #5b5e63;
+    background: var(--color-main);
     color: white;
     font-size: 1.0625rem;
     font-weight: 500;
@@ -507,15 +664,24 @@ footer {
 
 .right2 .icons a{
     display: inline-block;
+  
     text-decoration: none;
-    color: #5b5e63;
+    color: var(--color-main);
+    border-radius: 50%;
+    border: 1px solid gold;
+    width: 40px;
+    height: 40px;
+    align-items: center;
     text-align: center;
+    justify-content: center;
     transition: all 0.3s ease;
     font-size: 20px;
     margin-top: 20px;
+    line-height: 35px;
 
 }
 .right2{
+    
     text-decoration: none;
     height: 50px;
     line-height: 50px;
@@ -524,7 +690,15 @@ footer {
 .right2 input{
     height: 30px;
     font-size: 1.0625rem;;
+    width: 100%;
+    font-family: 'Hind Vadodara',sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
+    
+
 }
+
 
 @media screen and (max-width:700px) {
     footer {
